modification list: themeswitcher added [light theme is pending css] home page converted into componenet Update profile UI added and api integrted where fetch profile and update profile Update Password UI integrated and API integrated

--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,6 @@ eslintcache
 # Lock files (optional: if you don't want to track lock files)
 package-lock.json
 yarn.lock
+
+#custom files and folders
+_notes.txt
