Implement category management with routing, CRUD operations, and table features
- **Routing**:
  - Added routing for `PublicRoute`, `GuestRoute`, `AuthenticatedRoute`, and `PrivateRoute` to manage access control.
  - Implemented slice, thunk, and services to handle routing logic efficiently.

- **Category Management (Admin only)**:
  - Restricted access to category management to Admin role users only.

- **Category Listing**:
  - Integrated Material React Table to display the category list with pagination, filtering, and sorting.
  - Implemented server-side pagination, filtering, sorting, and rows per page.
  - Added checkbox for selecting multiple records.
  - Error handling: Display error messages for failed operations.
  - Added 'Add Category', 'Update Category', and 'Delete Category' buttons with corresponding actions.
  - Pending: 'Delete Selected Record(s)' functionality to display selected record IDs.
  - Enabled column actions: Hide/Show, Sorting, Filtering for each column.

- **Add Category**:
  - Implemented client-side validation using Formik and Yup.
  - Integrated server-side validation to manage form input.
  - Added duplicate category name check to prevent inserting duplicate records.
  - Upon successful validation, category is added to the database and the datatable is refreshed.

- **Update Category**:
  - Implemented functionality to send category ID and perform a soft delete.
  - Upon deletion, category listing is automatically refreshed.

- **Delete Category**:
  - Added a confirmation dialog with the category name to confirm deletion.
  - Implemented soft deletion with ID sending. Refresh the category listing after deletion.
  - Error handling: Display error message if category data is not found.

- **UI Improvements**:
  - Added animation to buttons for better user interaction and UI responsiveness.

This update improves category management functionality, enhances UI interactivity, and ensures better error handling for a seamless user experienc

--- a/src/config.json
+++ b/src/config.json
@@ -1,3 +1,7 @@
 {
-  "APP_BASE_NAME": "VikrantXCode"
+  "APP_BASE_NAME": "VikrantXCode",
+  "roles" : {
+    "ADMIN_ROLE_ID" : 1,
+    "USER_ROLE_ID" : 2
+  }
 }
