--- a/package.json
+++ b/package.json
@@ -14,20 +14,28 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^6.1.10",
-    "@mui/material": "^6.1.10",
+    "@mui/icons-material": "^6.3.1",
+    "@mui/material": "^6.3.1",
+    "@mui/x-data-grid": "^7.23.5",
     "@reduxjs/toolkit": "^2.4.0",
-    "@tanstack/react-query": "^5.62.7",
+    "@tanstack/react-query": "^5.62.14",
+    "@tanstack/react-table": "^8.20.6",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
+    "framer-motion": "^11.16.3",
+    "material-react-table": "^3.1.0",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.14.1",
     "react-redux": "^8.1.3",
     "react-router": "^6.28.0",
     "react-router-dom": "^6.28.0",
+    "react-spring": "^9.7.5",
     "reactjs-authify-crudx": "file:",
+    "swiper": "^11.2.0",
     "yup": "^1.5.0"
   },
   "devDependencies": {
