Hire Me buttons Add - Hire me page add - contact details add

--- a/package.json
+++ b/package.json
@@ -5,6 +5,23 @@
   "type": "module",
   "description": "A React-based CRUD application with authentication features. [VikrantXCode]",
   "author": "Vikrant Parmar <vikrant.parmar91@gmail.com>",
+  "keywords": [
+    "React",
+    "CRUD",
+    "authentication",
+    "ReactJS",
+    "react-auth",
+    "frontend",
+    "redux",
+    "mui",
+    "material-ui",
+    "formik",
+    "axios",
+    "redux-toolkit",
+    "react-query",
+    "VikrantXCode",
+    "#VikrantXCode"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -20,6 +37,7 @@
     "@reduxjs/toolkit": "^2.4.0",
     "@tanstack/react-query": "^5.62.14",
     "@tanstack/react-table": "^8.20.6",
+    "@vercel/analytics": "^1.4.1",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
